--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,3 +219,24 @@ footer {
   font-size: var(--small-font);
   padding: 1em;
 }
+
+.directory img {
+  width: 100px;
+  height: 100px;
+  margin: 0 30px;
+}
+
+.directory a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+}
+
+.directory {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
