form with summary

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -240,3 +240,37 @@ footer {
   align-items: center;
   justify-content: center;
 }
+
+.formTitle {
+  text-align: center;
+}
+
+#checkoutForm {
+  max-width: 25rem;
+  margin: auto;
+}
+
+#checkoutForm fieldset {
+  padding: 2rem;
+}
+
+#checkoutForm label {
+  display: block;
+}
+
+#checkoutForm input {
+  display: block;
+  width: 100%;
+  height: 2rem;
+  margin-bottom: 1rem;
+}
+
+.col-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.grid-right {
+  text-align: end;
+}
